fix: letter-spacing

--- a/components/ProfileActivity/ProfileActivity.module.css
+++ b/components/ProfileActivity/ProfileActivity.module.css
@@ -36,4 +36,5 @@
 .highlight-address {
   padding: 0.25rem;
   background-color: var(--highlight-active-10);
+  letter-spacing: 0.125rem;
 }
